// MythoGyan Knowledge Base — Next-Generation DBML
// Fully character-centric, Indian mythology, lineage, cultural context, media, audit versioning

Table characters {
  uuid uuid [pk]
  canonical_name text [not null]
  aliases text[]
  description text
  origin text
  caste_or_role text
  type text
  gender text
  alignment text
  attributes jsonb
  symbolism jsonb
  source_texts text[]
  birth_event_uuid uuid [ref: > events.uuid]
  death_event_uuid uuid [ref: > events.uuid]
  father_uuid uuid [ref: > characters.uuid]
  mother_uuid uuid [ref: > characters.uuid]
  created_at timestamptz
  updated_at timestamptz
  is_active boolean
}

Table titles_and_epithets {
  uuid uuid [pk]
  character_uuid uuid [ref: > characters.uuid]
  title text
  epithet text
  source_reference text
  created_at timestamptz
}

Table marriages {
  uuid uuid [pk]
  spouse1_uuid uuid [ref: > characters.uuid]
  spouse2_uuid uuid [ref: > characters.uuid]
  marriage_event_uuid uuid [ref: > events.uuid]
  context text
  children_uuids uuid[]
  created_at timestamptz
}

Table relationship_types {
  uuid uuid [pk]
  name text
  description text
  category text
  created_at timestamptz
}

Table relationships {
  uuid uuid [pk]
  source_uuid uuid [ref: > characters.uuid]
  target_uuid uuid [ref: > characters.uuid]
  relation_type_uuid uuid [ref: > relationship_types.uuid]
  context text
  source_reference text
  confidence_score numeric
  is_bidirectional boolean
  created_at timestamptz
}

Table events {
  uuid uuid [pk]
  name text
  description text
  epoch_uuid uuid [ref: > epochs.uuid]
  location_uuid uuid [ref: > locations.uuid]
  start_order int
  end_order int
  event_type text
  parent_event_uuid uuid [ref: > events.uuid]
  created_at timestamptz
}

Table event_participants {
  id serial [pk]
  event_uuid uuid [ref: > events.uuid]
  character_uuid uuid [ref: > characters.uuid]
  role text
  context text
}

Table locations {
  uuid uuid [pk]
  name text
  historical_name text
  type text
  description text
  latitude numeric
  longitude numeric
  current_country text
  created_at timestamptz
}

Table artifacts {
  uuid uuid [pk]
  name text
  description text
  type text
  material text
  owner_uuid uuid [ref: > characters.uuid]
  creator_uuid uuid [ref: > characters.uuid]
  significance text
  powers jsonb
  source_reference text
  created_at timestamptz
}

Table artifact_transfers {
  uuid uuid [pk]
  artifact_uuid uuid [ref: > artifacts.uuid]
  from_uuid uuid [ref: > characters.uuid]
  to_uuid uuid [ref: > characters.uuid]
  transfer_event_uuid uuid [ref: > events.uuid]
  context text
  created_at timestamptz
}

Table powers {
  uuid uuid [pk]
  name text
  description text
  granted_by_uuid uuid [ref: > characters.uuid]
  received_by_uuid uuid [ref: > characters.uuid]
  type text
  context text
  source_reference text
  created_at timestamptz
}

Table boons_and_curses {
  uuid uuid [pk]
  name text
  description text
  giver_uuid uuid [ref: > characters.uuid]
  receiver_uuid uuid [ref: > characters.uuid]
  type text // Boon or Curse
  reason text
  created_at timestamptz
}

Table conditions {
  uuid uuid [pk]
  associated_boon_curse_uuid uuid [ref: > boons_and_curses.uuid]
  description text
  fulfilled_event_uuid uuid [ref: > events.uuid]
  status text
  created_at timestamptz
}

Table temples {
  uuid uuid [pk]
  name text
  location_uuid uuid [ref: > locations.uuid]
  dedicated_to_uuid uuid [ref: > characters.uuid]
  description text
  festival_associations text[]
  created_at timestamptz
}

Table trainings {
  uuid uuid [pk]
  student_uuid uuid [ref: > characters.uuid]
  teacher_uuid uuid [ref: > characters.uuid]
  location_uuid uuid [ref: > locations.uuid]
  subjects text[]
  context text
  start_event_uuid uuid [ref: > events.uuid]
  end_event_uuid uuid [ref: > events.uuid]
  created_at timestamptz
}

Table festivals {
  uuid uuid [pk]
  name text
  description text
  associated_event_uuid uuid [ref: > events.uuid]
  month text
  cultural_region text
  created_at timestamptz
}

Table festival_participants {
  uuid uuid [pk]
  festival_uuid uuid [ref: > festivals.uuid]
  character_uuid uuid [ref: > characters.uuid]
  role text
  context text
}

Table epochs {
  uuid uuid [pk]
  name text
  order_index int
  description text
  start_event_uuid uuid [ref: > events.uuid]
  end_event_uuid uuid [ref: > events.uuid]
  yuga_type text
}

Table reincarnations {
  id serial [pk]
  previous_uuid uuid [ref: > characters.uuid]
  next_uuid uuid [ref: > characters.uuid]
  cycle_order int
  context text
  incarnation_type text
  epoch_uuid uuid [ref: > epochs.uuid]
}

Table concepts {
  uuid uuid [pk]
  name text
  description text
  category text
  symbolism jsonb
  ethical_polarity text
  archetype text
  symbolic_color text
  cultural_region text
  created_at timestamptz
  updated_at timestamptz
}

Table entity_concept_tags {
  id serial [pk]
  entity_uuid uuid
  entity_type text
  concept_uuid uuid [ref: > concepts.uuid]
  relevance_score numeric
  context text
  created_at timestamptz
}

Table media {
  uuid uuid [pk]
  entity_uuid uuid
  entity_type text
  media_type text
  url text
  caption text
  playlist text
  created_at timestamptz
}

Table media_tags {
  id serial [pk]
  media_uuid uuid [ref: > media.uuid]
  tag text
  relevance_score numeric
  context text
}

Table entity_history {
  id serial [pk]
  entity_uuid uuid
  entity_type text
  field_name text
  old_value text
  new_value text
  change_type text
  approval_status text
  changed_by text
  changed_at timestamptz
}

Table graph_sync_status {
  entity_uuid uuid [pk]
  entity_type text
  last_synced_at timestamptz
  sync_status text
}

Table battles {
  uuid uuid [pk]
  name text
  description text
  epoch_uuid uuid [ref: > epochs.uuid]
  location_uuid uuid [ref: > locations.uuid]
  start_order int
  end_order int
  outcome text
  created_at timestamptz
}

Table battle_participants {
  id serial [pk]
  battle_uuid uuid [ref: > battles.uuid]
  character_uuid uuid [ref: > characters.uuid]
  role text
  side text
  weapon_uuid uuid [ref: > artifacts.uuid]
  powers_used jsonb
  context text
  created_at timestamptz
}

Table alliances {
  uuid uuid [pk]
  name text
  description text
  member_uuids uuid[]
  event_uuid uuid [ref: > events.uuid]
  type text
  created_at timestamptz
}

Table duel_events {
  uuid uuid [pk]
  event_uuid uuid [ref: > events.uuid]
  participant1_uuid uuid [ref: > characters.uuid]
  participant2_uuid uuid [ref: > characters.uuid]
  outcome text
  artifact_used_uuids uuid[]
  powers_used jsonb
  created_at timestamptz
}

Ref: relationships.source_uuid > characters.uuid
Ref: relationships.target_uuid > characters.uuid
Ref: relationships.relation_type_uuid > relationship_types.uuid
Ref: characters.father_uuid > characters.uuid
Ref: characters.mother_uuid > characters.uuid
Ref: characters.birth_event_uuid > events.uuid
Ref: characters.death_event_uuid > events.uuid
Ref: events.epoch_uuid > epochs.uuid
Ref: events.parent_event_uuid > events.uuid
Ref: events.location_uuid > locations.uuid
Ref: event_participants.event_uuid > events.uuid
Ref: event_participants.character_uuid > characters.uuid
Ref: artifacts.owner_uuid > characters.uuid
Ref: artifacts.creator_uuid > characters.uuid
Ref: artifact_transfers.artifact_uuid > artifacts.uuid
Ref: artifact_transfers.from_uuid > characters.uuid
Ref: artifact_transfers.to_uuid > characters.uuid
Ref: powers.granted_by_uuid > characters.uuid
Ref: powers.received_by_uuid > characters.uuid
Ref: boons_and_curses.giver_uuid > characters.uuid
Ref: boons_and_curses.receiver_uuid > characters.uuid
Ref: conditions.associated_boon_curse_uuid > boons_and_curses.uuid
Ref: conditions.fulfilled_event_uuid > events.uuid
Ref: trainings.student_uuid > characters.uuid
Ref: trainings.teacher_uuid > characters.uuid
Ref: trainings.location_uuid > locations.uuid
Ref: trainings.start_event_uuid > events.uuid
Ref: trainings.end_event_uuid > events.uuid
Ref: temples.dedicated_to_uuid > characters.uuid
Ref: temples.location_uuid > locations.uuid
Ref: festivals.associated_event_uuid > events.uuid
Ref: festival_participants.festival_uuid > festivals.uuid
Ref: festival_participants.character_uuid > characters.uuid
Ref: reincarnations.previous_uuid > characters.uuid
Ref: reincarnations.next_uuid > characters.uuid
Ref: reincarnations.epoch_uuid > epochs.uuid
Ref: entity_concept_tags.concept_uuid > concepts.uuid
Ref: battles.epoch_uuid > epochs.uuid
Ref: battles.location_uuid > locations.uuid
Ref: battle_participants.battle_uuid > battles.uuid
Ref: battle_participants.character_uuid > characters.uuid
Ref: battle_participants.weapon_uuid > artifacts.uuid
Ref: alliances.event_uuid > events.uuid
Ref: duel_events.event_uuid > events.uuid
Ref: duel_events.participant1_uuid > characters.uuid
Ref: duel_events.participant2_uuid > characters.uuid
